<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuiRKEY</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="continue_label">Continue</string>
    <string name="password">Password</string>
    <string name="done">Done</string>
    <string name="confirm">Confirm</string>
    
    <!-- CameraActivity -->
	<string name="reg_camera_info">Scan the registration code</string>
	<string name="auth_camera_info">Scan the authentication code</string>

    <!-- MenuActivity -->
    <string name="scan">Scan</string>
    <string name="delete">Delete</string>
    <string name="register">Register</string>
    <string name="authenticate">Authenticate</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="scan_error">Scan Error</string>
    <string name="device_name">Device Name:</string>
    <string name="please_wait">Please, wait&#8230;</string>
    <string name="registration_finish">Device registered successfully</string>
    <string name="authentication_finish">Authentication successful</string>
    <string name="registration_error">Registration error</string>
    <string name="communication_error">There was an error in the communication.</string>
    <string name="untrusted_certificate_title">Certificate Error</string>
    <string name="untrusted_certificate">The site\'s security certificate is not trusted!</string>
    <string name="device_registered">Device registered</string>
    <string name="device_not_registered">Device not registered</string>
    <string name="transaction_error">Transaction Error</string>
    <string name="reg_transaction_error">You are trying to authenticate with an unregistered device.</string>
    <string name="auth_transaction_error">You are trying to register a device that is already registered.</string>
    <string name="error">Error</string>
    <string name="success">Success!</string>
    <string name="reg_duplicated_device">This device is already registered in the system.</string>
    <string name="auth_not_existing">The device does not exist in the system.</string>
    <string name="connection_error_title">Connection Error</string>
    <string name="connection_error_message">The device is not connected to the network.</string>
    <string name="action_reset">Reset</string>
    <string name="register_info">Please, tap the screen and scan the QR Code to register this device.</string>
    <string name="authenticate_info">Please, tap the screen and scan the QR Code to authenticate in the system with this device.</string>
    
    <string name="set_passcode_title">Passcode needed</string>
    <string name="set_passcode">Please, set a passcode:</string>
    <string name="repeat_passcode">Repeat passcode:</string>
    <string name="enter_passcode">Enter passcode:</string>
    <string name="reset_confirm_title">This will reset your device\'s QuiRKEY settings. Continue?</string>
    
    
    <string name="passcode_empty_error">Passcode cannot be empty.</string>
    <string name="passcode_length_error">Passcode must be %1$d digit length.</string>
    <string name="passcode_repeat_error">Passcodes must match.</string>
    <string name="passcode_error">Incorrect Passcode.</string>
    
</resources>