<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_setPasscode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_passcode"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_setPasscode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    

    <TextView
        android:id="@+id/textView_repeatPasscode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/repeat_passcode"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_repeatPasscode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/done" />

</LinearLayout>