<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/quirkey_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:showDividers="none"
    tools:context=".MenuActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/image_registered"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:clickable="true"
            android:src="@drawable/red_cross" />

        <TextView
            android:id="@+id/textview_registered"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/device_not_registered"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color_white" />
    </LinearLayout>

    <TextView
        android:id="@+id/textview_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:text="@string/register_info"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/color_white" />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:text="@string/register" />

</LinearLayout>